# curtis_core

./: CMakeLists.txt  README.md
include/curtis_core/: Buffer.h  Counter.h  Curtis.h  CurtisAPI.h  Density.h  Factory.h  Glisson.h  Granulator.h  IBuffer.h  ICounter.h  IDensity.h  IFactory.h  IGlisson.h  IGranulator.h  IInputMix.h  IPanner.h  IPolarity.h  IProcessor.h  IRandomRange.h  IRandomizer.h  IReadBuffer.h  ISegmentBank.h  ISegmentDetector.h  IStereoProcessor.h  IVisualizationDataCache.h  IVisualizationDataProvider.h  InputMix.h  Panner.h  Polarity.h  RandomRange.h  Randomizer.h  ReadBuffer.h  SegmentBank.h  SegmentDetector.h  VisualizationData.h  VisualizationDataCache.h  VisualizationDataSet.h
mock/: CMakeLists.txt
mock/include/curtis_core/: BufferMock.h  CounterMock.h  DensityMock.h  FactoryMock.h  GlissonMock.h  GranulatorMock.h  InputMixMock.h  PannerMock.h  PolarityMock.h  RandomRangeMock.h  RandomizerMock.h  ReadBufferMock.h  RepeaterMock.h  SegmentBankMock.h  SegmentDetectorMock.h
source/: Buffer.cpp  Counter.cpp  Curtis.cpp  CurtisAPI.cpp  Density.cpp  Factory.cpp  Glisson.cpp  Granulator.cpp  InputMix.cpp  Panner.cpp  Polarity.cpp  RandomRange.cpp  Randomizer.cpp  ReadBuffer.cpp  SegmentBank.cpp  SegmentDetector.cpp
test/: CMakeLists.txt
test/source/: BufferTestCase.cpp  CounterTestCase.cpp  CurtisTestCase.cpp  DensityTestCase.cpp  FactoryTestCase.cpp  GlissonTestCase.cpp  GranulatorTestCase.cpp  InputMixTestCase.cpp  PannerTestCase.cpp  PolarityTestCase.cpp  RandomRangeTestCase.cpp  RandomizerTestCase.cpp  SegmentBankTestCase.cpp  SegmentDetectorTestCase.cpp
